--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -35,6 +35,7 @@
      unarchive:
        src: "/tmp/latest.tar.gz"
        dest: /var/www/html/
+       remote_src: yes
      become: yes
      become_method: sudo
 
