--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -48,3 +48,11 @@
         enabled: yes
       become: yes
       become_method: sudo
+    
+    - name: Start htppd
+      systemd:
+        name: httpd
+        state: start
+        enable: yes
+      become: yes
+      become_method: sudo
