--- a/wordpress1.yaml
+++ b/wordpress1.yaml
@@ -29,7 +29,9 @@
       unarchive: 
         src: /tmp/wordpress-5.2.1.tar.gz 
         dest: /var/www/html
-        remote_src: yes 
+        remote_src: yes
+        become: yes
+        become_method: sudo
 
 
 
