--- a/wordpress1.yaml
+++ b/wordpress1.yaml
@@ -20,9 +20,14 @@
         - php 
         - php-mysql
         - php-fpm
+        - epel-release
       ignore_errors: true
 
     
+    - name: config manager enabled
+      shell: "sudo yum-config-manager --enable remi-php70"
+    - name: update httpd PHP
+      shell: "sudo yum update httpd php php-mysql mysql"
     
     - name: Download wordpress package
       get_url:
