--- a/wordpress1.yaml
+++ b/wordpress1.yaml
@@ -7,6 +7,7 @@
   connection: ssh
   tasks:
     - name: Install necessary packages
+      use: yum
       package: 
         name: "{{item}}"
         state: latest
