--- a/wordpress1.yaml
+++ b/wordpress1.yaml
@@ -3,7 +3,7 @@
   hosts: web
   become: yes
   become_method: sudo 
-  gather_facts: no 
+  gather_facts: yes 
   connection: ssh
   tasks:
     - name: Install necessary packages
