--- a/wordpress1.yaml
+++ b/wordpress1.yaml
@@ -4,6 +4,10 @@
   become: yes
   become_method: sudo 
   tasks:
+    - name: config manager enabled
+      shell: "sudo yum-config-manager --enable remi-php70"
+  
+
     - name: Install necessary packages
       package: 
         name: "{{item}}"
@@ -16,14 +20,18 @@
         - mysql
         - mariadb-server
         - php 
-        - php-mysql
-        - php-fpm
+        - php-common
+        - php-opcache
+        - php-mrcrypt
+        - php-cli
+        - php-gd
+        - php-curl
+        - php-mysqlnd
         - epel-release
       ignore_errors: true
 
     
-    - name: config manager enabled
-      shell: "sudo yum-config-manager --enable remi-php70"
+    
     - name: update httpd PHP
       shell: "sudo yum update httpd php php-mysql mysql"
     
