--- a/wordpress1.yaml
+++ b/wordpress1.yaml
@@ -5,7 +5,7 @@
   become_method: sudo 
   tasks:
     - name: config manager enabled
-      shell: "sudo yum-config-manager --enable remi-php70"
+      shell: "sudo yum install epel-release -y"
   
 
     - name: Install necessary packages
