--- a/download.yaml
+++ b/download.yaml
@@ -7,8 +7,14 @@
    - name: URL
      prompt: "Give me the url: "
      private: no
+   - name: Destination
+     prompt: "Give me the location to put: "
+     private: no
+
   tasks:
    - name: Download 1 package
      get_url:
        url: "{{URL}}"
-       dest: /tmp/
+       dest: "{{DESTINATION}}"
+
+    
