--- a/download_to_a_host.yaml
+++ b/download_to_a_host.yaml
@@ -7,8 +7,11 @@
    - name: DESTINATION
      prompt: "Give me the location to put: "
      private: no
+   - name: HOST
+     prompt: "Which host?"
+     private: no
 
-  hosts: all
+  hosts: "{{HOST}}"
   
   become: yes
   become_method: sudo
