--- a/update_kernel.yaml
+++ b/update_kernel.yaml
@@ -1,9 +1,12 @@
 ---
 - hosts: localhost
-  tasks: 
-   - name: update kernel to latest
-     package:
-       name: kernel
-         state: latest
+  tasks:
+    - name: update kernel to latest
+      when: ansilbe_distribution == "CentOS" and ansible_distribution_major_version == "7"
+      package:
+        name: kernel
+        state: latest
       become: yes
       become_method: sudo
+    #- name: Restart the system
+    #  reboot: 
