--- a/terminate_instance.yaml
+++ b/terminate_instance.yaml
@@ -12,5 +12,5 @@
     - name: Terminate instances
       ec2: 
         instance_ids: "{{ID}}"
-        state: terminate  # stopped
+        state: absent  # stopped
         region: "{{REGION}}"
