--- a/ec2.yaml
+++ b/ec2.yaml
@@ -1,13 +1,16 @@
----  #sudo pip install boto
+---   #sudo pip install boto
 - name: Creates ec2 instance
   hosts: localhost
+  vars_files:
+    - ec2_vars
   tasks:
-    - name: Create instances 
+    - name: Create instances
       ec2:
-        key_name: mylaptop
-        instance_type: t2.micro
-        image: ami-0f2b4fc905b0bd1f1 
-        count: 3
-        vpc_subnet_id: subnet-ef255a95
-        assign_public_ip: yes
-        region: us-east-2
+        key_name: "{{key_name}}"
+        instance_type: "{{instance_type}}"
+        image: "{{image}}"
+        count: "{{count}}"
+        vpc_subnet_id: "{{vpc_subnet_id}}"
+        region: "{{region}}"
+        user_data: "{{ lookup('file', 'user_data.sh') }}"
+        
