--- a/r1soft_agent.yaml
+++ b/r1soft_agent.yaml
@@ -2,23 +2,24 @@
 - name: Install r1soft agent
   hosts: target
   become: yes
-  become_method: sudo
-  tasks:
-    - name: Create a Repository
-      copy:
+  become_method: sudo 
+  tasks: 
+    - block:
+      - name: Create a Repository
+        copy:
           src: r1soft.repo
           dest: /etc/yum.repos.d/r1soft.repo
-
-    - name: Install r1soft agent
-      package:
-        name: serverbackup-enterprise-agent
-        state: latest
-
-    - name: start agent
-      systemd:
-        name: sbm-agent
-        state: restarted
-
-    - name: get key
-      shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
-
+    
+      - name: Install r1soft agent
+        package:
+          name: serverbackup-enterprise-agent 
+          state: latest
+      
+      - name: Start agent
+        systemd:
+          name: sbm-agent
+          state: restarted
+    
+      - name: Get key
+        shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
+      when: ansible_distribution == "CentOS"
