--- a/r1soft_agent.yaml
+++ b/r1soft_agent.yaml
@@ -4,6 +4,83 @@
   become: yes
   become_method: sudo 
   tasks: 
+# this line is for centos 7
+    - block:
+      - name: Create a Repository
+        copy:
+          src: r1soft.repo
+          dest: /etc/yum.repos.d/r1soft.repo
+    
+      - name: Install r1soft agent
+        package:
+          name: serverbackup-enterprise-agent 
+          state: latest
+        notify: R1SOFT_INSTALLED_ON_CENTOS_7
+
+      - name: Get key
+        shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
+      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7" 
+  
+  handlers:
+    - name: R1SOFT_INSTALLED_ON_CENTOS_7
+      systemd:
+         name: sbm-agent
+         state: restarted
+    - name: R1SOFT_INSTALLED_ON_CENTOS_6
+      service:
+         name: cdp-agent
+         state: restarted
+    - name: R1SOFT_INSTALLED_ON_CENTOS_8
+      systemd:
+         name: sbm-agent
+         state: restarted
+
+
+
+# this line is for centos 6
+    - block:
+      - name: Create a Repository
+        copy:
+          src: r1soft.repo
+          dest: /etc/yum.repos.d/r1soft.repo
+    
+      - name: Install r1soft agent
+        package:
+          name: serverbackup-enterprise-agent 
+          state: latest
+        notify: R1SOFT_INSTALLED_ON_CENTOS_6
+    
+      - name: Get key
+        shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
+      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
+  
+  
+  
+
+
+
+    
+# this line is for centos 8
+    - block:
+      - name: Create a Repository
+        copy:
+          src: r1soft.repo
+          dest: /etc/yum.repos.d/r1soft.repo
+    
+      - name: Install r1soft agent
+        package:
+          name: serverbackup-enterprise-agent 
+          state: latest
+        notify: R1SOFT_INSTALLED_ON_CENTOS_8
+
+    
+      - name: Get key
+        shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
+      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "8"
+
+
+
+# this line is for Fedora
     - block:
       - name: Create a Repository
         copy:
@@ -22,24 +99,18 @@
     
       - name: Get key
         shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
-      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7"
-    
-    - block:
-      - name: Create a Repository
-        copy:
-          src: r1soft.repo
-          dest: /etc/yum.repos.d/r1soft.repo
-    
-      - name: Install r1soft agent
-        package:
-          name: serverbackup-enterprise-agent 
-          state: latest
-      
-      - name: Start agent
-        service:
-          name: cdp-agent
-          state: restarted
-    
-      - name: Get key
-        shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
-      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
+      when: ansible_distribution == "Fedora" and ansible_distribution_major_version == "28"
+
+  handlers:
+    - name: R1SOFT_INSTALLED_ON_CENTOS_7
+      systemd:
+         name: sbm-agent
+         state: restarted
+    - name: R1SOFT_INSTALLED_ON_CENTOS_6
+      service:
+         name: cdp-agent
+         state: restarted
+    - name: R1SOFT_INSTALLED_ON_CENTOS_8
+      systemd:
+         name: sbm-agent
+         state: restarted
