--- a/filebeat.yaml
+++ b/filebeat.yaml
@@ -9,6 +9,7 @@
         shell: "curl -L -O https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.1.1-x86_64.rpm"
       - name: install from rpm
         shell: "rpm -vi filebeat-7.1.1-x86_64.rpm"
+        notify: FILEBEAT_CENTOS_6
       when: when ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
 
     - block:
@@ -16,8 +17,8 @@
         shell: "curl -L -O https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.1.1-x86_64.rpm"
       - name: install from rpm
         shell: "rpm -vi filebeat-7.1.1-x86_64.rpm"
+        notify: FILEBEAT_CENTOS_7
       when: when ansible_distribution == "CentOS" and ansible_distribution_major_version == "7"
-
 
   handlers:
     - name: FILEBEAT_CENTOS_6
