--- a/filebeat.yaml
+++ b/filebeat.yaml
@@ -3,22 +3,27 @@
   hosts: all
   become: yes
   become_user: root
-  tasks: 
+  tasks:
     - block:
       - name: Install filebeat repo on centos 6
         shell: "curl -L -O https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.1.1-x86_64.rpm"
-      - name: install from rpm
+      - name: Install from rpm
         shell: "rpm -vi filebeat-7.1.1-x86_64.rpm"
-        notify: FILEBEAT_CENTOS_6
-      when: when ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
+        notify: FILEBEAT_CENTOS_6 
+      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
+      
+
 
     - block:
       - name: Install filebeat repo on centos 7
         shell: "curl -L -O https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.1.1-x86_64.rpm"
-      - name: install from rpm
+      - name: Install from rpm
         shell: "rpm -vi filebeat-7.1.1-x86_64.rpm"
         notify: FILEBEAT_CENTOS_7
-      when: when ansible_distribution == "CentOS" and ansible_distribution_major_version == "7"
+      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7" 
+      
+
+
 
   handlers:
     - name: FILEBEAT_CENTOS_6
