--- a/filebeat.yaml
+++ b/filebeat.yaml
@@ -6,24 +6,24 @@
   tasks:
     - block:
       - name: Install filebeat repo on centos 6
-        shell: "curl -L -O https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.1.1-x86_64.rpm"
-      - name: Install from rpm
-        shell: "rpm -vU filebeat-7.1.1-x86_64.rpm"
-        notify: FILEBEAT_CENTOS_6
-        ignore_errors: true 
+        package: 
+          name: "https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.1.1-x86_64.rpm"
+          state: latest
+        notify: FILEBEAT_CENTOS_6 
       when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
+      ignore_errors: true
       
 
 
     - block:
       - name: Install filebeat repo on centos 7
-        shell: "curl -L -O https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.1.1-x86_64.rpm"
-      - name: Install from rpm
-        shell: "rpm -vU filebeat-7.1.1-x86_64.rpm"
+        package: 
+          name: "https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.1.1-x86_64.rpm"
+          state: latest
         notify: FILEBEAT_CENTOS_7
-        ignore_errors: true
       when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7" 
-      
+      ignore_errors: true
+
 
 
 
@@ -36,5 +36,3 @@
       systemd:
         name: filebeat
         state: restarted
-
-- ignore_errors: true
