--- a/r1soft_agent.yaml
+++ b/r1soft_agent.yaml
@@ -14,7 +14,7 @@
       - name: Install r1soft agent
         package:
           name: serverbackup-enterprise-agent 
-          state: latest
+          state: present
         notify: R1SOFT_INSTALLED_ON_CENTOS_7
 
       - name: Get key
@@ -35,7 +35,7 @@
       - name: Install r1soft agent
         package:
           name: serverbackup-enterprise-agent 
-          state: latest
+          state: present
         notify: R1SOFT_INSTALLED_ON_CENTOS_6
     
       - name: Get key
@@ -58,7 +58,7 @@
       - name: Install r1soft agent
         package:
           name: serverbackup-enterprise-agent 
-          state: latest
+          state: present
         notify: R1SOFT_INSTALLED_ON_CENTOS_8
 
     
@@ -78,7 +78,7 @@
       - name: Install r1soft agent
         package:
           name: serverbackup-enterprise-agent 
-          state: latest
+          state: present
       
       - name: Start agent
         systemd:
