--- a/terminate_instance.yaml
+++ b/terminate_instance.yaml
@@ -1,16 +1,10 @@
 ---
 - name: Terminates instances
-  vars_prompt: 
-    - name: ID
-      prompt: "ID to terminate?"
-      private: no
-    - name: REGION
-      prompt: "Region of the instance?"
-      private: no
   hosts: localhost
   tasks:
     - name: Terminate instances
-      ec2: 
-        instance_ids: "{{ID}}"
-        state: absent  # stopped
-        region: "{{REGION}}"
+      ec2:
+        instance_ids: "{{instance_ids}}"
+        state: "{{state}}"    #stopped   #started  #restarted
+        region: "{{region}}"
+        
