--- a/administration/test_role.yaml
+++ b/administration/test_role.yaml
@@ -1,7 +1,8 @@
 ---
-- name: Test playbook for role
+- name: Test playbook for role 
   hosts: localhost
   become: yes
   become_user: root
-  roles: 
-    - package: 
+  roles:
+    - package
+    - wordpress
