--- a/bootstrap/docker/docker_deploy.yaml
+++ b/bootstrap/docker/docker_deploy.yaml
@@ -5,13 +5,11 @@
     - docker_vars
   tasks:
     - name: Deploy instance
-      ec2: 
+      ec2:
         key_name: "{{key_name}}"
         instance_type: "{{instance_type}}"
-        image: "{{image}}" 
+        image: "{{image}}"
         count: "{{count}}"
         vpc_subnet_id: "{{vpc_subnet_id}}"
-        assign_public_ip: yes
         region: "{{region}}"
-        user_data: "{{ lookup('file', 'userdata.sh') }}"
-        
+        user_data: "{{ lookup('file', 'docker_deploy.sh') }}"
