--- a/bootstrap/wordpress.yaml
+++ b/bootstrap/wordpress.yaml
@@ -48,6 +48,7 @@
         enabled: yes
       become: yes
       become_method: sudo
+      ignore_errors: yes
     
     - name: Start htppd
       systemd:
