--- a/bootstrap/wordpress.yaml
+++ b/bootstrap/wordpress.yaml
@@ -30,12 +30,12 @@
 
     - name: Download wordpress Package
       get_url:
-        url: https://wordpress.org/latest.tar.gz
+        url: https://wordpress.org/wordpress-5.2.1.tar.gz
         dest: /tmp/
 
     - name: Unzip wordpres file
       unarchive:
-        src: "/tmp/wordpress-5.3.2.tar.gz"    
+        src: "/tmp/wordpress-5.2.1.tar.gz"    
         dest: "/var/www/html"
         remote_src: yes
       become: yes
