--- a/bootstrap/wordpress.yaml
+++ b/bootstrap/wordpress.yaml
@@ -9,24 +9,19 @@
         name: "{{item}}"
         state: latest
       with_items:
+       - epel-release
        - wget 
        - unzip
-       - httpd  
-       - php
-       - php-gd
-       - mysql
        - mariadb-server
-       - php-mysql
-       - php-fpm
       ignore_errors: true
 
   
     - name: Install epel-release
       shell: "sudo wget -q http://rpms.remirepo.net/enterprise/remi-release-7.rpm"
     - name: config manager enabled 
-      shell: "sudo yum-config-manager --enable remi-php70"
+      shell: "sudo yum-config-manager --enable remi-php72"
     - name : update httpd PHP 
-      shell: "sudo yum update httpd php php-mysql mysql" 
+      shell: "sudo yum install httpd php php-common php-opcache php-mcrypt php-cli php-gd php-curl php-mysql mysql -y" 
 
     - name: Download wordpress Package
       get_url:
