--- a/bootstrap/wordpress.yaml
+++ b/bootstrap/wordpress.yaml
@@ -17,11 +17,12 @@
 
   
     - name: Install epel-release
-      shell: "sudo wget -q http://rpms.remirepo.net/enterprise/remi-release-7.rpm"
+      shell: "sudo yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm"
     - name: config manager enabled 
       shell: "sudo yum-config-manager --enable remi-php72"
     - name : update httpd PHP 
       shell: "sudo yum install httpd php php-common php-opcache php-mcrypt php-cli php-gd php-curl php-mysql mysql -y" 
+
 
     - name: Download wordpress Package
       get_url:
