--- a/bootstrap/wordpress.yaml
+++ b/bootstrap/wordpress.yaml
@@ -17,7 +17,7 @@
 
   
     - name: Install epel-release
-      shell: "sudo yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm"
+      shell: "sudo yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y"
     - name: config manager enabled 
       shell: "sudo yum-config-manager --enable remi-php72"
     - name : update httpd PHP 
